# ml-tech-assessment

./: .env.example  README.md  postman_collection.json  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py  schemas.py
app/domain/: errors.py  models.py  ports.py
app/infra/: di.py  memory_repository.py  openai_adapter_impl.py
app/use_cases/: analyze_batch.py  analyze_transcript.py  get_analysis.py
tests/: test_routes.py  test_use_cases.py
